--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,7 +113,7 @@
             <div class="item-img" role="img" aria-label="" style="padding-bottom: calc((400 / 1347) * 100%);background-image:url(../images/fundo3.jpg);background-size:cover">
             </div>
             <div data-appearance="slide_caption_background" class="carousel-caption">
-              <h3 data-appearance="slide_title_color">Josué Souza da Siva</h3>
+              <h3 data-appearance="slide_title_color">Josué Souza da Silva</h3>
               <a data-appearance="slide_button_background" href="#" class="btn btn-primary">
                 <span data-appearance="slide_button_text_color">Sobre</span>
               </a>
